<?xml version="1.0"?>

<package format="2">

  <name>kulman</name>
  <version>0.0.1</version>
  <description>None</description>
  <license>Proprietary</license>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>kulman_basics</depend>
  <depend>kulman_state_estimator</depend>
  <depend>param_io</depend>

</package>
