<?xml version="1.0"?>

<package format="2">

  <name>kulman_state_estimator</name>
  <version>0.0.1</version>
  <description>None</description>
  <license>Proprietary</license>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>param_io</depend>
  <depend>kulman_msgs</depend>
  <depend>roscpp</depend>



</package>
